--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -1,7 +1,8 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
-  name: MyString
+  name: Task One
+  category: one
 
 two:
-  name: MyString
+  name: Task Two
+  category: two
+
